--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-<a class="forkme" style="position: fixed;z-index:9999;top:0;right: 0" href="https://github.com/JoeyBling/resume"><img
+<a class="forkme" style="position: fixed;z-index:9999;top:0;right: 0" href="https://github.com/JoeyBling/resume" target="_blank"><img
         width="149" height="149" src="./image/forkme.png" class="attachment-full size-full" alt="Fork me on GitHub"
         data-recalc-dims="1"></a>
 
