--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <hr>
             <div class="center fades fadesin">
                 <div class="my-intro">
-                    <p>联系QQ:2434387555&nbsp;&nbsp;|&nbsp;&nbsp;我的微信：13647910412
+                    <p>联系QQ：2434387555&nbsp;&nbsp;|&nbsp;&nbsp;我的微信：13647910412
                     </p>
                     <p>不浮躁，不偏激，不守旧，爱编程，爱后端，爱新技术，爱运动，爱旅行，执行力和学习能力都棒棒哒！
                     </p>
